navigate component initialized

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.16",
@@ -24,6 +25,7 @@
     "bootstrap-toggle": "^2.2.2",
     "chart.js": "^4.4.2",
     "dayjs": "^1.11.11",
+    "emailjs": "^4.0.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.9",
     "jwt-decode": "^4.0.0",
@@ -35,14 +37,17 @@
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-flag-kit": "^1.1.1",
     "react-flags-select": "^2.2.3",
     "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-lottie": "^1.2.4",
     "react-phone-number-input": "^3.4.1",
+    "react-quill": "^0.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0",
     "react-select-country-list": "^2.2.3",
